Update summary page, statistic page, change company image - MinhTHD

--- a/summary-abstract.html
+++ b/summary-abstract.html
@@ -251,14 +251,16 @@
 
 
   }
-
-  #icon2>img {
+  #icon2 {
+    margin-left: 20px;
+  }
+  #icon2>div>img {
     height: 110px;
     width: 110px;
     /* border: 3px solid rgba(175, 174, 174, 0.781); */
     border-radius: 50%;
     /* margin-top:5px; */
-    margin-left: 20px;
+    /* margin-left: 20px; */
   }
 
   .container-fluid {
@@ -266,9 +268,9 @@
   }
 
   .folder {
-    background: url("./images/world-map.png") no-repeat;
-    background-size: 95% 95%;
-    background-color: whitesmoke;
+    background: url("./images/background-abstact.jpg") no-repeat;
+    background-size: 100% 100%;
+    /* background-color: whitesmoke; */
     /* background-attachment: fixed; */
     /* background-position: center;  */
     background-position-y: 20%;
@@ -286,11 +288,12 @@
   }
 
   .banner {
-    background: url("./images/banner.png") no-repeat center;
+    background: url("./images/banner-alternative.png") no-repeat center;
     background-size: 450px 100%;
 
 
   }
+
   .statistic1 {
     background: url("./images/statistic1.png") no-repeat center;
     background-size: 100% 100%;
@@ -356,16 +359,16 @@
               </div>
               <div class="col-md-7 row justify-content-around" id="icon1">
 
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/skill1.png" alt="Skill"><span>text</span>
 
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/skill2.png" alt="Skill">text
                 </div>
 
 
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/spring.svg" alt="Skill">text
                 </div>
               </div>
@@ -379,16 +382,17 @@
             <div class="row justify-content-between" id="position">
 
               <div class="col-md-7 row justify-content-around" id="icon2">
+                <div class="col-md-3 text-center">
+                  <img src="./images/job2.png" alt="Job">text
+                </div>
+                <div class="col-md-3 text-center">
+                  <img src="./images/job1.png" alt="Job">text
+                </div>
 
-                <img src="./images/job2.png" alt="Job">
 
-
-                <img src="./images/job1.png" alt="Job">
-
-
-
-
-                <img src="./images/job.png" alt="Job">
+                <div class="col-md-3 text-center">
+                  <img src="./images/job.png" alt="Job">text
+                </div>
               </div>
 
               <div class="col-md-3 my-auto text-center">
@@ -405,9 +409,8 @@
         <div class="tab-pane fade" id="statistic" role="tabpanel" aria-labelledby="profile-tab">
           <div class="row">
             <div class="col-md-4" style="text-align: right">
-              <img src="..\ctsa-capstone\images\java.png" alt="Java" height="60" width="150"><br>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+              Java
+              <p>Lorem ipsumsdfhjdghjdshjbdhjbsdhfdhbdsd dhdsbfsdbfdsfbdshfsbd dsjfbsdjfbdsh f</p>
 
             </div>
             <div class="col-md-2 text-center ">
@@ -420,22 +423,20 @@
             <div class="col-md-2 text-center ">
               <div class="statistic2">
                 <span style="color:rgb(235, 226, 226); font-size:5em">08</span><br>
-                <span style="color:#ff6215; font-size:1.4em">Công ty XYZ</span><br><br><br><br>
+                <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty XYZ</span><br><br><br><br>
               </div>
 
             </div>
             <div class="col-md-4">
-              <img src="..\ctsa-capstone\images\nest.svg" alt="Nest" height="60" width="150"><br>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+              Python
+              <p>Lorem ipsumsdfhjdghjdshjbdhjbsdhfdhbdsd dhdsbfsdbfdsfbdshfsbd dsjfbsdjfbdsh f</p>
 
             </div>
           </div>
           <div class="row">
             <div class="col-md-4" style="text-align: right">
-              <img src="..\ctsa-capstone\images\javascript.png" alt="javascript" height="60" width="150"><br>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+              JavaScript
+              <p>Lorem ipsumsdfhjdghjdshjbdhjbsdhfdhbdsd dhdsbfsdbfdsfbdshfsbd dsjfbsdjfbdsh f</p>
 
             </div>
             <div class="col-md-2 text-center ">
@@ -448,14 +449,13 @@
             <div class="col-md-2 text-center ">
               <div class="statistic2">
                 <span style="color:rgb(235, 226, 226); font-size:5em">002</span><br>
-                <span style="color:#ff6215; font-size:1.4em">Công ty Fsoft</span><br><br><br><br>
+                <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty Fsoft</span><br><br><br><br>
               </div>
 
             </div>
             <div class="col-md-4">
-              <img src="..\ctsa-capstone\images\node-js.png" alt="NodeJS" height="60" width="150"><br>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua.</p>
+              NodeJS
+              <p>Lorem ipsumsdfhjdghjdshjbdhjbsdhfdhbdsd dhdsbfsdbfdsfbdshfsbd dsjfbsdjfbdsh f</p>
 
             </div>
           </div>
@@ -468,15 +468,15 @@
             <div class="col-md-3 text-center">
 
               <div class="py-1 banner" style=" height:500px; ">
-                <hr style="border: 3px solid rgb(224, 221, 221); width: 1528px;position:relative; z-index: 10;left:-207px; margin-top:18px">
+                <hr style="border: 3px solid rgb(224, 221, 221); width: 1087px;position:relative; z-index: 10;left:-152px; margin-top:6px">
                 <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
                 <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
-                <img src="..\ctsa-capstone\images\companyA.png" alt="Hình công ty" height="130" width="200" style="margin-top:50px;margin-bottom: 30px"><br>
+                <img src="..\ctsa-capstone\images\companyA.jpg" alt="Hình công ty" height="130" width="230"><br>
                 <span>15 vị trí</span><br>
                 <span>Đang tuyển dụng</span><br>
-                <span class="fa-stack fa-3x" style="margin-top:30px">
-                  <span class="fa fa-circle fa-stack-2x" style="color: #dbd9d6"></span>
-                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#f32f52">
+                <span class="fa-stack">
+                  <span class="fa fa-circle fa-stack-2x" style="color: rgb(235, 235, 235)"></span>
+                  <span class="fa-stack-1x" style="font-size: 20px; color:#fdb03e">
                     2
                   </span>
                 </span>
@@ -484,33 +484,35 @@
 
             </div>
             <div class="col-md-3 text-center">
-              <div class="banner" style=" height:600px;  padding-top: 46px">
+              <div class="banner" style=" height:600px;  padding-top: 33px">
                 <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
                 <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
-                <img src="..\ctsa-capstone\images\companyB.svg" alt="Hình công ty" height="130" width="200" style="margin-top:50px;margin-bottom: 50px"><br>
+                <img src="..\ctsa-capstone\images\companyB.jpg" alt="Hình công ty" height="130" width="230"><br>
                 <span>15 vị trí</span><br>
-                  <span>Đang tuyển dụng</span><br>
-                  <span class="fa-stack fa-3x" style="margin-top:95px">
-                    <span class="fa fa-circle fa-stack-2x" style="color: #dbd9d6"></span>
-                    <span class="fa fa-stack-1x" style="font-size: 40px; color:#f32f52">
-                      1
-                    </span>
+                <span>Đang tuyển dụng</span><br>
+                <span class="fa-stack">
+                  <span class="fa fa-circle fa-stack-2x" style="color: rgb(235, 235, 235)"></span>
+                  <span class="fa-stack-1x" style="font-size: 20px; color:#fdb03e">
+                    1
                   </span>
+                </span>
               </div>
 
             </div>
             <div class="col-md-3 text-center">
-              <div class="banner" style="height:500px;  padding-top: 46px">
+              <div class="banner" style="height:500px;  padding-top: 33px">
                 <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
                 <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
-                <img src="..\ctsa-capstone\images\companyC.png" alt="Hình công ty" height="130" width="200" style="margin-top:50px"><br>
+                <img src="..\ctsa-capstone\images\companyC.jpg" alt="Hình công ty" height="130" width="230"
+                  "><br>
                 <span>15 vị trí</span><br>
                 <span>Đang tuyển dụng</span><br>
-                <span class="fa-stack fa-3x" style="margin-top:50px">
-                  <span class="fa fa-circle fa-stack-2x" style="color: #dbd9d6"></span>
-                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#f32f52">
-                    3
-                  </span>
+                <span class="
+                  fa fa-stack-2x">
+                <span class="fa fa-circle fa-stack-2x" style="color: rgb(235, 235, 235)"></span>
+                <span class="fa-stack-2x" style="font-size: 30px; color:#fdb03e">
+                  3
+                </span>
                 </span>
               </div>
 
