--- a/summary-alternative.html
+++ b/summary-alternative.html
@@ -252,13 +252,17 @@
 
   }
 
-  #icon2>img {
+  #icon2 {
+    margin-left: 20px;
+  }
+
+  #icon2>div>img {
     height: 110px;
     width: 110px;
     /* border: 3px solid rgba(175, 174, 174, 0.781); */
     border-radius: 50%;
     /* margin-top:5px; */
-    margin-left: 20px;
+    /* margin-left: 20px; */
   }
 
   .container-fluid {
@@ -281,7 +285,7 @@
   }
 
   #recruit>div>div>div>span {
-    color: rgb(235, 226, 226);
+    /* color: rgb(235, 226, 226); */
 
   }
 
@@ -357,16 +361,16 @@
               </div>
               <div class="col-md-7 row justify-content-around" id="icon1">
 
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/skill1.png" alt="Skill"><span>text</span>
 
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/skill2.png" alt="Skill">text
                 </div>
 
 
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/spring.svg" alt="Skill">text
                 </div>
               </div>
@@ -380,16 +384,17 @@
             <div class="row justify-content-between" id="position">
 
               <div class="col-md-7 row justify-content-around" id="icon2">
+                <div class="col-md-3 text-center">
+                  <img src="./images/job2.png" alt="Job">text
+                </div>
+                <div class="col-md-3 text-center">
+                  <img src="./images/job1.png" alt="Job">text
+                </div>
 
-                <img src="./images/job2.png" alt="Job">
 
-
-                <img src="./images/job1.png" alt="Job">
-
-
-
-
-                <img src="./images/job.png" alt="Job">
+                <div class="col-md-3 text-center">
+                  <img src="./images/job.png" alt="Job">text
+                </div>
               </div>
 
               <div class="col-md-3 my-auto text-center">
@@ -406,8 +411,9 @@
         <div class="tab-pane fade" id="statistic" role="tabpanel" aria-labelledby="profile-tab">
           <div class="row">
             <div class="col-md-4" style="text-align: right">
-              Java
-              <p>Lorem ipsumsdfhjdghjdshjbdhjbsdhfdhbdsd dhdsbfsdbfdsfbdshfsbd dsjfbsdjfbdsh f</p>
+              <img src="..\ctsa-capstone\images\java.png" alt="Java" height="60" width="150"><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
 
             </div>
             <div class="col-md-2 text-center ">
@@ -420,20 +426,22 @@
             <div class="col-md-2 text-center ">
               <div class="statistic2">
                 <span style="color:rgb(235, 226, 226); font-size:5em">08</span><br>
-                <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty XYZ</span><br><br><br><br>
+                <span style="color:#ff6215; font-size:1.4em">Công ty XYZ</span><br><br><br><br>
               </div>
 
             </div>
             <div class="col-md-4">
-              Python
-              <p>Lorem ipsumsdfhjdghjdshjbdhjbsdhfdhbdsd dhdsbfsdbfdsfbdshfsbd dsjfbsdjfbdsh f</p>
+              <img src="..\ctsa-capstone\images\nest.svg" alt="Nest" height="60" width="150"><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
 
             </div>
           </div>
           <div class="row">
             <div class="col-md-4" style="text-align: right">
-              JavaScript
-              <p>Lorem ipsumsdfhjdghjdshjbdhjbsdhfdhbdsd dhdsbfsdbfdsfbdshfsbd dsjfbsdjfbdsh f</p>
+              <img src="..\ctsa-capstone\images\javascript.png" alt="javascript" height="60" width="150"><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
 
             </div>
             <div class="col-md-2 text-center ">
@@ -446,13 +454,14 @@
             <div class="col-md-2 text-center ">
               <div class="statistic2">
                 <span style="color:rgb(235, 226, 226); font-size:5em">002</span><br>
-                <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty Fsoft</span><br><br><br><br>
+                <span style="color:#ff6215; font-size:1.4em">Công ty Fsoft</span><br><br><br><br>
               </div>
 
             </div>
             <div class="col-md-4">
-              NodeJS
-              <p>Lorem ipsumsdfhjdghjdshjbdhjbsdhfdhbdsd dhdsbfsdbfdsfbdshfsbd dsjfbsdjfbdsh f</p>
+              <img src="..\ctsa-capstone\images\node-js.png" alt="NodeJS" height="60" width="150"><br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua.</p>
 
             </div>
           </div>
@@ -465,15 +474,15 @@
             <div class="col-md-3 text-center">
 
               <div class="py-1 banner" style=" height:500px; ">
-                <hr style="border: 3px solid rgb(224, 221, 221); width: 1087px;position:relative; z-index: 10;left:-152px; margin-top:6px">
+                <hr style="border: 3px solid rgb(224, 221, 221); width: 1528px;position:relative; z-index: 10;left:-207px; margin-top:18px">
                 <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
                 <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
-                <img src="..\ctsa-capstone\images\companyA.jpg" alt="Hình công ty" height="130" width="230"><br>
+                <img src="..\ctsa-capstone\images\companyA.png" alt="Hình công ty" height="130" width="200" style="margin-top:50px;margin-bottom: 30px"><br>
                 <span>15 vị trí</span><br>
                 <span>Đang tuyển dụng</span><br>
-                <span class="fa-stack">
-                  <span class="fa fa-circle fa-stack-2x" style="color: rgb(235, 235, 235)"></span>
-                  <span class="fa-stack-1x" style="font-size: 20px; color:#fdb03e">
+                <span class="fa-stack fa-3x" style="margin-top:30px">
+                  <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
+                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
                     2
                   </span>
                 </span>
@@ -481,34 +490,33 @@
 
             </div>
             <div class="col-md-3 text-center">
-              <div class="banner" style=" height:600px;  padding-top: 33px">
+              <div class="banner" style=" height:600px;  padding-top: 46px">
                 <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
                 <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
-                <img src="..\ctsa-capstone\images\companyB.jpg" alt="Hình công ty" height="130" width="230"><br>
+                <img src="..\ctsa-capstone\images\companyB.svg" alt="Hình công ty" height="130" width="200" style="margin-top:50px;margin-bottom: 50px"><br>
                 <span>15 vị trí</span><br>
-                <span>Đang tuyển dụng</span><br>
-                <span class="fa-stack">
-                  <span class="fa fa-circle fa-stack-2x" style="color: rgb(235, 235, 235)"></span>
-                  <span class="fa-stack-1x" style="font-size: 20px; color:#fdb03e">
-                    1
+                  <span>Đang tuyển dụng</span><br>
+                  <span class="fa-stack fa-3x" style="margin-top:95px">
+                    <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
+                    <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
+                      1
+                    </span>
                   </span>
-                </span>
               </div>
 
             </div>
             <div class="col-md-3 text-center">
-              <div class="banner" style="height:500px;  padding-top: 33px">
+              <div class="banner" style="height:500px;  padding-top: 46px">
                 <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
                 <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
-                <img src="..\ctsa-capstone\images\companyC.jpg" alt="Hình công ty" height="130" width="230"
-                  "><br>
+                <img src="..\ctsa-capstone\images\companyC.png" alt="Hình công ty" height="130" width="200" style="margin-top:50px"><br>
                 <span>15 vị trí</span><br>
                 <span>Đang tuyển dụng</span><br>
-                <span class="fa fa-stack-2x">
-                <span class="fa fa-circle fa-stack-2x" style="color: rgb(235, 235, 235)"></span>
-                <span class="fa-stack-2x" style="font-size: 30px; color:#fdb03e">
-                  3
-                </span>
+                <span class="fa-stack fa-3x" style="margin-top:50px">
+                  <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
+                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
+                    3
+                  </span>
                 </span>
               </div>
 
