Change logo color, delete summery-alternative - MinhTHD

--- a/summary.html
+++ b/summary.html
@@ -252,13 +252,17 @@
 
   }
 
-  #icon2>img {
+  #icon2 {
+    margin-left: 20px;
+  }
+
+  #icon2>div>img {
     height: 110px;
     width: 110px;
     /* border: 3px solid rgba(175, 174, 174, 0.781); */
     border-radius: 50%;
     /* margin-top:5px; */
-    margin-left: 20px;
+    /* margin-left: 20px; */
   }
 
   .container-fluid {
@@ -281,16 +285,17 @@
   }
 
   #recruit>div>div>div>span {
-    color: rgb(235, 226, 226);
+    /* color: rgb(235, 226, 226); */
 
   }
 
   .banner {
-    background: url("./images/banner.png") no-repeat center;
+    background: url("./images/banner-alternative.png") no-repeat center;
     background-size: 450px 100%;
 
 
   }
+
   .statistic1 {
     background: url("./images/statistic1.png") no-repeat center;
     background-size: 100% 100%;
@@ -356,16 +361,16 @@
               </div>
               <div class="col-md-7 row justify-content-around" id="icon1">
 
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/skill1.png" alt="Skill"><span>text</span>
 
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/skill2.png" alt="Skill">text
                 </div>
 
 
-                <div class="col-md-4 text-center">
+                <div class="col-md-3 text-center">
                   <img src="./images/spring.svg" alt="Skill">text
                 </div>
               </div>
@@ -379,16 +384,17 @@
             <div class="row justify-content-between" id="position">
 
               <div class="col-md-7 row justify-content-around" id="icon2">
+                <div class="col-md-3 text-center">
+                  <img src="./images/job2.png" alt="Job">text
+                </div>
+                <div class="col-md-3 text-center">
+                  <img src="./images/job1.png" alt="Job">text
+                </div>
 
-                <img src="./images/job2.png" alt="Job">
 
-
-                <img src="./images/job1.png" alt="Job">
-
-
-
-
-                <img src="./images/job.png" alt="Job">
+                <div class="col-md-3 text-center">
+                  <img src="./images/job.png" alt="Job">text
+                </div>
               </div>
 
               <div class="col-md-3 my-auto text-center">
@@ -475,8 +481,8 @@
                 <span>15 vị trí</span><br>
                 <span>Đang tuyển dụng</span><br>
                 <span class="fa-stack fa-3x" style="margin-top:30px">
-                  <span class="fa fa-circle fa-stack-2x" style="color: #dbd9d6"></span>
-                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#f32f52">
+                  <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
+                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
                     2
                   </span>
                 </span>
@@ -491,8 +497,8 @@
                 <span>15 vị trí</span><br>
                   <span>Đang tuyển dụng</span><br>
                   <span class="fa-stack fa-3x" style="margin-top:95px">
-                    <span class="fa fa-circle fa-stack-2x" style="color: #dbd9d6"></span>
-                    <span class="fa fa-stack-1x" style="font-size: 40px; color:#f32f52">
+                    <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
+                    <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
                       1
                     </span>
                   </span>
@@ -507,8 +513,8 @@
                 <span>15 vị trí</span><br>
                 <span>Đang tuyển dụng</span><br>
                 <span class="fa-stack fa-3x" style="margin-top:50px">
-                  <span class="fa fa-circle fa-stack-2x" style="color: #dbd9d6"></span>
-                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#f32f52">
+                  <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
+                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
                     3
                   </span>
                 </span>
