--- a/summary.html
+++ b/summary.html
@@ -19,295 +19,7 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href=".\css\style.css">
 </head>
-<style>
-  #triangle {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 32px;
-    /* border-top-color: #e27e21; */
-    border-top-color: #be1600;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-    border-right-color: #be1600;
-    /* border-right-color: #e27e21; */
-    margin-left: -79px;
-    margin-top: 72px;
-  }
 
-  #triangle2 {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 32px;
-    border-top-color: #be1600;
-    border-bottom-color: transparent;
-    border-left-color: #be1600;
-    border-right-color: transparent;
-    margin-left: 1520px;
-    margin-top: 32px;
-
-  }
-
-  #triangle3 {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 75px;
-    /* border-top-color: #e27e21; */
-    border-top-color: #fdb03e;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    /* border-right-color: #e27e21; */
-
-  }
-
-  #triangle4 {
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 75px;
-    /* border-top-color: #e27e21; */
-    border-top-color: #fe6f20;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    /* border-right-color: #e27e21; */
-
-  }
-
-  #triangle5 {
-
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 125px;
-    /* border-top-color: #e27e21; */
-    border-top-color: #fdb03e;
-    border-bottom-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent;
-
-    background: url("./images/banner-middle.png") no-repeat center;
-    background-size: 100% 100%;
-
-
-  }
-
-  #skill {
-    /* background: url("./images/background-ctsa.png"); */
-    background-position-x: 80%;
-    /* background: url("./images/violet-banner.jpg"); */
-    background: url("./images/orange-banner.jpg") no-repeat;
-    background-color: white;
-    left: -80px;
-    top: 72px;
-    height: 150px;
-    border-radius: 0px 90px 90px 0px;
-    /* box-shadow: grey 0 5px 5px 1px; */
-
-  }
-
-  #position {
-    /* background: url("./images/background-ctsa - inverse.png"); */
-    background: url("./images/orange-banner-flip.jpg") no-repeat;
-    /* background: url("./images/orange-background.jpg"); */
-    background-position-x: 100%;
-    background-color: white;
-    left: 453px;
-    top: 32px;
-    height: 150px;
-    border-radius: 90px 0px 0px 90px;
-    /* box-shadow: grey 0 5px 5px 1px; */
-    text-align: right;
-
-  }
-
-  body {
-    /* background-color: #ffffffd5; */
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
-    font-size: 16px;
-
-  }
-
-  .tab {
-    height: 50px;
-    width: 150px;
-    border-radius: 15px 15px 0px 0px;
-    background-color: #FFF;
-    position: relative;
-    top: 25px;
-    background-color: #075166;
-
-    display: inline-block;
-    z-index: 2;
-    color: #EEE;
-  }
-
-  a {
-    color: rgb(214, 213, 213);
-    padding: 5px;
-    font-size: 1.4em;
-  }
-
-  .tabactive {
-    background-color: whitesmoke !important;
-    box-shadow: black 0 5px 10px 0;
-    /* color: rgb(226, 220, 220) ; */
-  }
-
-  .tabactive>a {
-    color: #161616;
-    font-size: 1.4em;
-    font-weight: bold;
-  }
-
-  .tab:before {
-    height: 50px;
-    width: 70px;
-    border-radius: 10px 10px 0px 0px;
-    background-color: #075166;
-    content: "";
-    position: absolute;
-    left: 104px;
-    top: 0px;
-    -webkit-transform: skewX(40deg);
-    transform: skewX(40deg);
-    z-index: -1;
-  }
-
-  .tabactive:before {
-    height: 50px;
-    width: 70px;
-    border-radius: 10px 10px 0px 0px;
-    background-color: whitesmoke;
-    content: "";
-    position: absolute;
-    left: 104px;
-    top: 0px;
-    -webkit-transform: skewX(40deg);
-    transform: skewX(40deg);
-    z-index: -1;
-  }
-
-  .tab:nth-of-type(2) {
-
-
-    left: 30px;
-    z-index: 1;
-
-  }
-
-
-
-  .tab:nth-of-type(2):hover,
-  .tab:nth-of-type(2):hover:before {
-    background-color: #159;
-    transition: 0.3s ease-out;
-  }
-
-  .tab:nth-of-type(3) {
-
-
-    left: 60px;
-    z-index: 0;
-
-  }
-
-
-
-  .tab:nth-of-type(3):hover,
-  .tab:nth-of-type(3):hover:before {
-    background-color: #159;
-    transition: 0.3s ease-out;
-  }
-
-
-
-  #content {
-    /* background-color: #0a90b5; */
-    height: 550px;
-    border-radius: 0px 20px 20px 20px;
-    height: calc(100vh - 200px);
-    top: 10px;
-
-    /* height:100vh; */
-
-  }
-
-
-  #icon1 {
-    margin-right: 20px;
-  }
-
-  #icon1>div>img {
-    height: 110px;
-    width: 110px;
-    /* border: 3px solid rgba(175, 174, 174, 0.781); */
-    border-radius: 50%;
-
-
-  }
-
-  #icon2 {
-    margin-left: 20px;
-  }
-
-  #icon2>div>img {
-    height: 110px;
-    width: 110px;
-    /* border: 3px solid rgba(175, 174, 174, 0.781); */
-    border-radius: 50%;
-    /* margin-top:5px; */
-    /* margin-left: 20px; */
-  }
-
-  .container-fluid {
-    width: 80vw !important;
-  }
-
-  .folder {
-    background: url("./images/world-map.png") no-repeat;
-    background-size: 95% 95%;
-    background-color: whitesmoke;
-    /* background-attachment: fixed; */
-    /* background-position: center;  */
-    background-position-y: 20%;
-    box-shadow: black 0 5px 10px 0;
-    z-index: 20;
-  }
-
-  .top-3 {
-    box-shadow: gray 0 5px 8px 0;
-  }
-
-  #recruit>div>div>div>span {
-    /* color: rgb(235, 226, 226); */
-
-  }
-
-  .banner {
-    background: url("./images/banner-alternative.png") no-repeat center;
-    background-size: 450px 100%;
-
-
-  }
-
-  .statistic1 {
-    background: url("./images/statistic1.png") no-repeat center;
-    background-size: 100% 100%;
-
-  }
-
-  .statistic2 {
-    background: url("./images/statistic2.png") no-repeat center;
-    background-size: 100% 100%;
-
-  }
-</style>
 
 <body>
   <!-- Header -->
@@ -340,11 +52,11 @@
             aria-selected="true">Tổng hợp</a>
         </li>
         <li class="nav-item tab" id="tabstat">
-          <a class="nav-link" id="profile-tab" data-toggle="tab" href="#statistic" role="tab" aria-controls="profile"
+          <a class="nav-link" id="statistic-tab" data-toggle="tab" href="#statistic" role="tab" aria-controls="profile"
             aria-selected="false">Thống kê</a>
         </li>
         <li class="nav-item tab" id="tabrecruit">
-          <a class="nav-link" id="contact-tab" data-toggle="tab" href="#recruit" role="tab" aria-controls="contact"
+          <a class="nav-link" id="recruit-tab" data-toggle="tab" href="#recruit" role="tab" aria-controls="contact"
             aria-selected="false">Tuyển dụng</a>
         </li>
       </ul>
@@ -471,53 +183,64 @@
 
           <div class="row justify-content-center ">
 
-            <div class="col-md-3 text-center">
+            <div class="col-md-3 text-center ">
 
-              <div class="py-1 banner" style=" height:500px; ">
-                <hr style="border: 3px solid rgb(224, 221, 221); width: 1528px;position:relative; z-index: 10;left:-207px; margin-top:18px">
-                <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
-                <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
-                <img src="..\ctsa-capstone\images\companyA.png" alt="Hình công ty" height="130" width="200" style="margin-top:50px;margin-bottom: 30px"><br>
-                <span>15 vị trí</span><br>
-                <span>Đang tuyển dụng</span><br>
-                <span class="fa-stack fa-3x" style="margin-top:30px">
-                  <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
-                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
+              <div class="py-4 banner" style=" height:550px; ">
+                <span class="fa-stack fa-2x">
+                  <span class="fa fa-circle fa-stack-2x" style="color:  #e9e7e3"></span>
+                  <span class="fa-stack-1x" style="font-size: 32px; color:#ff6414">
                     2
                   </span>
-                </span>
+                </span><br>
+                <span style="color:rgb(241, 236, 236); font-size:2em">Tên công ty</span><br><br>
+                <div class="card">
+                  <ul class="list-group list-group-flush">
+                    <li style="font-size:1.2em" class="list-group-item">15 vị trí</li>
+                    <li style="font-size:1.2em" class="list-group-item">Đang tuyển dụng</li>
+                  </ul>
+                </div>
+
+
+                <!-- <hr style="border: 3px solid rgb(224, 221, 221); width: 1528px;position:relative; z-index: 10;left:-207px; margin-top:18px"> -->
+
+                <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
+                <img src="..\ctsa-capstone\images\companyA.png" alt="Hình công ty" height="130" width="200" style="margin-top:50px;margin-bottom: 30px"><br>
+
+
               </div>
 
             </div>
             <div class="col-md-3 text-center">
-              <div class="banner" style=" height:600px;  padding-top: 46px">
-                <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
+              <div class="py-4 banner" style=" height:600px; ">
+                <span class="fa-stack fa-2x">
+                  <span class="fa fa-circle fa-stack-2x" style="color:  #e9e7e3"></span>
+                  <span class="fa-stack-1x" style="font-size: 32px; color:#ff6414">
+                    1
+                  </span>
+                </span><br>
+                <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br><br>
                 <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
                 <img src="..\ctsa-capstone\images\companyB.svg" alt="Hình công ty" height="130" width="200" style="margin-top:50px;margin-bottom: 50px"><br>
                 <span>15 vị trí</span><br>
-                  <span>Đang tuyển dụng</span><br>
-                  <span class="fa-stack fa-3x" style="margin-top:95px">
-                    <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
-                    <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
-                      1
-                    </span>
-                  </span>
+                <span>Đang tuyển dụng</span><br>
+
               </div>
 
             </div>
             <div class="col-md-3 text-center">
-              <div class="banner" style="height:500px;  padding-top: 46px">
+              <div class="py-4 banner" style="height:550px;">
+                <span class="fa-stack fa-2x">
+                  <span class="fa fa-circle fa-stack-2x" style="color:  #e9e7e3"></span>
+                  <span class="fa-stack-1x" style="font-size: 32px; color:#ff6414">
+                    3
+                  </span>
+                </span><br>
                 <span style="color:rgb(235, 226, 226); font-size:2em">Tên công ty</span><br>
                 <!-- <span style="color:rgb(235, 226, 226); font-size:1.4em">Công ty ABC</span> -->
                 <img src="..\ctsa-capstone\images\companyC.png" alt="Hình công ty" height="130" width="200" style="margin-top:50px"><br>
                 <span>15 vị trí</span><br>
                 <span>Đang tuyển dụng</span><br>
-                <span class="fa-stack fa-3x" style="margin-top:50px">
-                  <span class="fa fa-circle fa-stack-2x" style="color: #ff6414"></span>
-                  <span class="fa fa-stack-1x" style="font-size: 40px; color:#dbd9d6">
-                    3
-                  </span>
-                </span>
+
               </div>
 
             </div>
@@ -528,22 +251,25 @@
       </div>
     </div>
   </div>
+  <style>
+
+  </style>
   <script>
-//  $("#tabhome").click(function () {
-//             $(this).addClass(tabactive);
-//             $(".tabrecruit").removeClass(tabactive);
-//             $(".tabstat").removeClass(tabactive);
-//         });
-//         $("#tabhome").click(function () {
-//             $(this).addClass(tabactive);
-//             $(".tabrecruit").removeClass(tabactive);
-//             $(".tabstat").removeClass(tabactive);
-//         });
-//         $("#tabhome").click(function () {
-//             $(this).addClass(tabactive);
-//             $(".tabrecruit").removeClass(tabactive);
-//             $(".tabstat").removeClass(tabactive);
-//         });
+    $("#tabhome").click(function () {
+      $(this).addClass("tabactive");
+      $("#tabstat").removeClass("tabactive");
+      $("#tabrecruit").removeClass("tabactive");
+    });
+    $("#tabstat").click(function () {
+      $(this).addClass("tabactive");
+      $("#tabhome").removeClass("tabactive");
+      $("#tabrecruit").removeClass("tabactive");
+    });
+    $("#tabrecruit").click(function () {
+      $(this).addClass("tabactive");
+      $("#tabhome").removeClass("tabactive");
+      $("#tabstat").removeClass("tabactive");
+    });
   </script>
 </body>
 
