Update javascript for input form - MinhTHD

--- a/index-ctsa.html
+++ b/index-ctsa.html
@@ -87,14 +87,17 @@
                     </span><br>
                     <div class="role1 hideaway mx-4 pl-4 my-2" style="border-left-style: dashed; border-width:3px;">
                         <div id="chooseRole">
-                            <button id="" value="Developer" class="btn btn-outline-dark my-2 mx-1 rolebtn">Developer</button>
-                            <button id="" value="Tester" class="btn btn-outline-dark my-2 mx-1 rolebtn">Tester</button>
-                            <button id="" value="Desginer" class="btn btn-outline-dark my-2 mx-1 rolebtn">Desginer</button>
-                            <button id="" value="Engineer" class="btn btn-outline-dark my-2 mx-1 rolebtn">Engineer</button>
-                            <button id="" value="Project Manager" class="btn btn-outline-dark my-2 mx-1 rolebtn">Project
-                                Manager</button>
-                            <button id="" value="English" class="btn btn-outline-dark my-2 mx-1 rolebtn">English</button>
-                            <button id="" value="Japanese" class="btn btn-outline-dark my-2 mx-1 rolebtn">Japanese</button>
+                            <button id="" value="Developer" class="btn btn-outline-dark my-2 mx-1 rolebtn">Toán Học</button>
+                            <button id="" value="Tester" class="btn btn-outline-dark my-2 mx-1 rolebtn">Vật Lý</button>
+                            <button id="" value="Desginer" class="btn btn-outline-dark my-2 mx-1 rolebtn">Hóa Học</button>
+                            <button id="" value="Engineer" class="btn btn-outline-dark my-2 mx-1 rolebtn">Sinh Học</button>
+                            <button id="" value="Project Manager" class="btn btn-outline-dark my-2 mx-1 rolebtn">Lịch Sử</button>
+                            <button id="" value="English" class="btn btn-outline-dark my-2 mx-1 rolebtn">Địa Lý</button>
+                            <button id="" value="Japanese" class="btn btn-outline-dark my-2 mx-1 rolebtn">Anh Văn</button>
+                            <button id="" value="Japanese" class="btn btn-outline-dark my-2 mx-1 rolebtn">Mỹ Thuật</button>
+                            
+
+
                             <!-- <button id="role8" value="Other"class="btn btn-outline-dark my-2 mx-1 rolebtn">Other</button> -->
                         </div>
                         <div id="input" class="hideaway">
