--- a/index-ctsa.html
+++ b/index-ctsa.html
@@ -144,7 +144,7 @@
                             <button class="btn btn-outline-dark btn-lg btn-block col-md-5 my-2 mx-1 ">Hướng ngoại</button>
                         </div>
                     </div>
-                    <div id="comfirm" class="hideaway text-center"> <button class="btn btn-info btn-lg my-3 " style="background-color:#ff6414; border: none;">Gửi</button></div>
+                    <div id="comfirm" class="hideaway text-center"> <a href="result.html"><button class="btn btn-info btn-lg my-3 " style="background-color:#ff6414; border: none;">Gửi</button></a></div>
 
                 </div>
 
